--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,17 @@
 language: csharp
 solution: ADN.EntityFrameworkCore.sln
+mono: latest
 dotnet: 2.0.0
-script:
+
+addons:
+  sonarcloud:
+    organization: "andresdigiovanni-github"
+
+before_install:
+  - bash ./tools/travis-ci-install-sonar.sh
+
+install:
   - dotnet restore
-  - dotnet build ./src/ADN.EntityFrameworkCore/
-  - dotnet build ./tests/ADN.EntityFrameworkCore.Tests/
-  - dotnet test ./tests/ADN.EntityFrameworkCore.Tests/
+
+script:
+  - bash ./tools/travis-ci-build.sh
