--- a/src/ADN.EntityFrameworkCore/ADN.EntityFrameworkCore.csproj
+++ b/src/ADN.EntityFrameworkCore/ADN.EntityFrameworkCore.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <ProjectGuid>{F26E3CDC-C557-4190-BC68-DDF4A9C9BE75}</ProjectGuid>
     <Version>1.0.0</Version>
     <Title>ADN.EntityFrameworkCore</Title>
     <Authors>Andrés Di Giovanni</Authors>
